# simpleFileServer

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: log.rs  main.rs  rate_limiter.rs  sliding_window.rs  templates.rs
test/: benchmarking.sh  test.sh
