[package]
name = "http-file-server"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
mime_guess = "2.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
colored = "2.0"
tokio-util = "0.7.15"
moka = { version = "0.12", features = ["future"] }
futures = "0.3"
bytes = "1.10.1"
